<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GalgeSpil</string>

    <string name="yes">Ja</string>
    <string name="no">Nej</string>

    <string name="action_settings">Indstillinger</string>
    <string name="action_newgame">Nyt spil</string>
    <string name="action_chosenword">Vælg ord</string>
    <string name="action_loadgame">Hent spil</string>
    <string name="action_savegame">Gem spil</string>
    <string name="action_exit">Exit</string>
    <string name="action_show_word">Vis ordet</string>

    <string name="language_pref">Sprog og ordbrug</string>
    <string name="language_list">Sprog - Ikke implementeret</string>
    <string name="language_summary">Vælg hvilket sprog spillet skal bruge</string>
    <string name="cursewords">Bandeord - Ikke implementeret</string>
    <string name="cursewords_summary">Tillad bandeord i spillet</string>
    <string name="dr_words">Ord fra DR.dk</string>
    <string name="dr_words_summary">Brug ord fra DR\'s hjemmeside (kræver internet!)</string>
    <string name="title_activity_word_list">WordList</string>

    <string name="hello_world">Hello world!</string>
</resources>
