<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Game_Act">
    <item android:id="@+id/action_newgame" android:title="@string/action_newgame"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_chosenword" android:title="@string/action_chosenword"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_savegame" android:title="@string/action_savegame"
        android:orderInCategory="101" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="102" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="103" app:showAsAction="ifRoom" />

</menu>