<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relativeLayout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_newgame"
        android:id="@+id/newGameButton"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/savedGameButton"
        android:layout_alignEnd="@+id/savedGameButton"
        android:layout_alignLeft="@+id/savedGameButton"
        android:layout_alignStart="@+id/savedGameButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_loadgame"
        android:id="@+id/savedGameButton"
        android:layout_below="@+id/chooseWordButton"
        android:layout_alignRight="@+id/settingsButton"
        android:layout_alignEnd="@+id/settingsButton"
        android:layout_alignLeft="@+id/settingsButton"
        android:layout_alignStart="@+id/settingsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:id="@+id/settingsButton"
        android:layout_below="@+id/savedGameButton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainImage"
        android:src="@drawable/forkert6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/newGameButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_chosenword"
        android:id="@+id/chooseWordButton"
        android:layout_below="@+id/newGameButton"
        android:layout_alignRight="@+id/newGameButton"
        android:layout_alignEnd="@+id/newGameButton"
        android:layout_alignLeft="@+id/newGameButton"
        android:layout_alignStart="@+id/newGameButton" />

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_exit"
        android:id="@+id/exitButton"
        android:layout_below="@+id/settingsButton"
        android:layout_alignRight="@+id/settingsButton"
        android:layout_alignEnd="@+id/settingsButton"
        android:layout_alignLeft="@+id/settingsButton"
        android:layout_alignStart="@+id/settingsButton" /> -->
</RelativeLayout>